--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:1nEFUDP7oLdlvy9OgZuR5dhy+uxh43eoIBpxSDpWWc0=
+APP_KEY=base64:KWmh9UcjevbFF3pIVu4x2gKnf0XuaTusAZQaYEUjhTQ=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=crunchycode
 DB_USERNAME=root
 DB_PASSWORD=
 
