--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="Crunchy Code"
 APP_ENV=local
 APP_KEY=base64:1nEFUDP7oLdlvy9OgZuR5dhy+uxh43eoIBpxSDpWWc0=
 APP_DEBUG=true
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=crunchycode
 DB_USERNAME=root
 DB_PASSWORD=
 
